ChatGPT grammar check

--- a/app/views/docs/authentication-anonymous.phtml
+++ b/app/views/docs/authentication-anonymous.phtml
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-    If a user <b>later creates an account</b>, their information will be inhereted by the newly created account.
+    If a user <b>later creates an account</b>, their information will be inherited by the newly created account.
 </p>
 
 <h2><a href="#createSession" id="createSession">Create Anonymous Session</a></h2>
@@ -92,24 +92,23 @@ mutation {
 <p>
     Anonymous users cannot sign back in. 
     If they close their browser, or go to another computer, they won't be able to log in again.
-    Remeber to prompt the user to create an account to not lose their data.
+    Remember to prompt the user to create an account to not lose their data.
 </p>
 
 <p>
    Create an account with any of these methods to transition from an anonymous session to a user account session.
 </p>
 
-<ol class="margin-top margin-bottom-large text-size-normal">
-  <li>
-    <a href="/docs/authentication-email-pass">Email and password</a>
-  </li>
-  <li>
-    <a href="/docs/authentication-sms">Phone (SMS)</a>
-  </li>
-  <li>
-    <a href="/docs/authentication-magic">Magic URL</a>   
-  </li>
-  <li>
-    <a href="/docs/authentication-oauth">OAuth2</a>
-  </li>
-</ol>
+
+<p>
+<a href="/docs/authentication-email-pass"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny">Email and password</a>
+</p>
+<p>
+<a href="/docs/authentication-sms"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny">Phone (SMS)</a>
+</p>
+<p>
+<a href="/docs/authentication-magic"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny">Magic URL</a>   
+</p>
+<p>
+<a href="/docs/authentication-oauth"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny">OAuth2</a>
+</p>
