--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -125,7 +125,7 @@ mutation {
     Use the Users API when <b>acting as an administrator</b> in use cases like building admin consoles or server integrations.
     The Users API uses API keys to authenticate, which means Appwrite only knows which API key is accessing data.
     API keys <b>don't respect permissions</b>, which means they can access all data, and should never be shared with end users in client applications.
-    The Users API also has batch operations, letting your query and manage users from an admin's perspective.
+    The Users API also has batch operations, letting you query and manage users from an admin's perspective.
 </p>
 
 <h2><a href="#explore" id="explore">Explore</a></h2>
