--- a/app/views/docs/authentication-email-pass.phtml
+++ b/app/views/docs/authentication-email-pass.phtml
@@ -363,7 +363,7 @@ let token = try await account.createRecovery(
 </ul>
 
 <p>
-After receiving a email with the secret attached to the redirect link, submit a request to the <a href="/docs/client/account#accountUpdateRecovery">Create Password Recovery (confirmation)</a> endpoint to complete the recovery flow. The verification link sent to the user's email address is valid for 1 hour.
+After receiving an email with the secret attached to the redirect link, submit a request to the <a href="/docs/client/account#accountUpdateRecovery">Create Password Recovery (confirmation)</a> endpoint to complete the recovery flow. The verification link sent to the user's email address is valid for 1 hour.
 </p>
 
 <ul class="phases clear" data-ui-phases>
@@ -459,7 +459,7 @@ let token = try await account.updateRecovery(
 
 <h2><a href="#security" id="security">Security</a></h2>
 <p>
-   Appwrite does more than use secure implementation of email and password authentication on the server-side to ensure security.
+   Appwrite's security first mindset goes beyond a securely implementated of authentication API.
    You can enable features like password dictionary, password history, and disallow personal information to encourage users to pick better passwords.
    By enabling these features, you protect user data and teach better password choices, which helps make the internet a safer place.
 </p>
