--- a/app/views/docs/authentication-sms.phtml
+++ b/app/views/docs/authentication-sms.phtml
@@ -33,7 +33,7 @@ const sessionToken = await account.createPhoneSession(
     '+14255550123'
 );
 
-var userId = sessionToken.userId // Store this somewhere to use later when logging in</code></pre>
+var userId = sessionToken.userId; // Store this somewhere to use later when logging in</code></pre>
         </div>
     </li>
     <li>
@@ -52,7 +52,7 @@ final sessionToken = await account.createPhoneSession(
     phone: '+14255550123'
 );
 
-final userId = sessionToken.userId // Store this somewhere to use later when logging in</code></pre>
+final userId = sessionToken.userId; // Store this somewhere to use later when logging in</code></pre>
     </li>
     <li>
         <h3>Android</h3>
@@ -110,7 +110,7 @@ let userId = sessionToken.userId // Store this somewhere to use later when loggi
 
 <h2><a href="#login" id="login">Log In</a></h2>
 <p>
-    After initiation, the returned user ID and secret are used to confirm the user. 
+    After initiating the phone authentication process, the returned user ID and secret are used to confirm the user. 
     The secret will usually be a 6-digit number in the SMS message sent to the user.
 </p>
 
