Improve formatting and arrange items more logically

--- a/app/views/docs/functions-deploy.phtml
+++ b/app/views/docs/functions-deploy.phtml
@@ -9,9 +9,9 @@
     Here's everything you need to know to deploy your first Appwrite Function.
 </p>
 
-<h2><a href="#Git" id="Git">Git</a></h2>
+<h2><a href="#vcs" id="vcs">VCS (Version Control System)</a></h2>
 <p>
-    The recommended way to manage your Appwrite Function deployments is to use Git.
+    The recommended way to manage your Appwrite Function deployments is to use a version control system, like Git.
     This offers simple versioning and collaboration that will easily fit into the rest of your development workflow.
 </p>
 
